docs: 复盘新增「与 AI 协作时的权限判断」，并修正 RUNBOOK 的两处过期内容
复盘新增一节（self-reflection-lite.md）：
把本轮反复触发的提权判断经验落成可复用内容，每条都对应本轮的实际证据：

- 本环境实测的三道墙：写路径 / 子进程与管道 / 网络。关键结论是这三道墙
  不是"危险操作"才撞，而是"正常开发流程"就会撞——所以完整验证必然要连续申请放宽
- 提权的真正审查对象：不是眼前这串命令，而是"同类后续操作"；
  单看每一样都正常，合起来就是一次全放开，"看起来合理"恰是这类请求最危险的地方
- 三条判断依据（事实 / 信任 / 后果），并明确「语气不是判据」——
  附本轮实证：我曾用笃定的语气把门禁失败归因于 -DargLine，实测完全不成立
- 可持续姿态：不是每次沉重，而是每次真的看一眼；看不懂就不批；
  弹窗越少越不容易麻木——这直接解释了为什么"把判断机制化"比"要求人更谨慎"可靠
- 与本项目机制的对应表：哪些判断已机制化（秘密扫描、47 项验收、pom 参数），
  哪些还没（不可逆操作要先说明）

RUNBOOK 修正：
- 后端测试那一行已过期：JVM 参数现在配置在 backend/pom.xml，不再需要命令行传
- 故障对照表补齐三类环境边界（写路径、网络、Maven 在钩子里找不到）与
  git reset --hard 丢改动的提示

筛选标准：能落到具体证据或具体机制的才记录，纯激励性表述不入文档。